Source/WebCore/rendering/PositionedLayoutConstraints.cpp
@@ -58,12 +58,19 @@ static bool shouldFlipStaticPositionInParent(const RenderBox& outOfFlowBox, cons
     return parent->writingMode().isBlockFlipped() && parent->isWritingModeRoot();
 }
 
+PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& renderer, LogicalBoxAxis selfAxis)
+    : PositionedLayoutConstraints(renderer, renderer.style(), selfAxis)
+{
+}
+
 PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& renderer, const RenderStyle& style, LogicalBoxAxis selfAxis)
-    : m_container(downcast<RenderBoxModelObject>(*renderer.container())) // Using containingBlock() would be wrong for relpositioned inlines.
+    : m_renderer(renderer)
+    , m_container(downcast<RenderBoxModelObject>(*renderer.container())) // Using containingBlock() would be wrong for relpositioned inlines.
     , m_containingWritingMode(m_container->writingMode())
     , m_writingMode(style.writingMode())
-    , m_physicalAxis(selfAxis == LogicalBoxAxis::Inline ? m_writingMode.inlineAxis() : m_writingMode.blockAxis())
+    , m_selfAxis(selfAxis)
     , m_containingAxis(!isOrthogonal() ? selfAxis : oppositeAxis(selfAxis))
+    , m_physicalAxis(selfAxis == LogicalBoxAxis::Inline ? m_writingMode.inlineAxis() : m_writingMode.blockAxis())
     , m_style(style)
     , m_alignment(m_containingAxis == LogicalBoxAxis::Inline ? style.justifySelf() : style.alignSelf())
     , m_defaultAnchorBox(needsAnchor() ? Style::AnchorPositionEvaluator::defaultAnchorForBox(renderer) : nullptr)
@@ -74,25 +81,28 @@ PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& render
 {
 
     // Compute basic containing block info.
-    auto containingWidth = renderer.containingBlockLogicalWidthForPositioned(*m_container, false);
+    auto containingInlineSize = renderer.containingBlockLogicalWidthForPositioned(*m_container, false);
     if (LogicalBoxAxis::Inline == m_containingAxis)
-        m_containingRange.set(m_container->borderLogicalLeft(), containingWidth);
+        m_containingRange.set(m_container->borderLogicalLeft(), containingInlineSize);
     else
         m_containingRange.set(m_container->borderBefore(), renderer.containingBlockLogicalHeightForPositioned(*m_container, false));
-    m_marginPercentageBasis = containingWidth;
+    m_containingInlineSize = containingInlineSize;
     m_originalContainingRange = m_containingRange;
 
     // Adjust for grid-area.
-    captureGridArea(renderer);
+    captureGridArea();
 
     // Capture the anchor geometry and adjust for position-area.
-    captureAnchorGeometry(renderer);
+    captureAnchorGeometry();
+}
 
+void PositionedLayoutConstraints::computeInsets()
+{
     // Cache insets and margins, etc.
-    captureInsets(renderer, selfAxis);
+    captureInsets();
 
     if (m_useStaticPosition)
-        computeStaticPosition(renderer, selfAxis);
+        computeStaticPosition();
 
     if (containingCoordsAreFlipped()) {
         // Ideally this check is incorporated into captureInsets() but currently it needs to happen after computeStaticPosition() because containingCoordsAreFlipped() depends on m_useStaticPosition.
@@ -104,11 +114,6 @@ PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& render
     m_insetModifiedContainingRange = m_containingRange;
     m_insetModifiedContainingRange.shiftMinEdgeBy(insetBeforeValue());
     m_insetModifiedContainingRange.shiftMaxEdgeBy(-insetAfterValue());
-}
-
-PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& renderer, LogicalBoxAxis selfAxis)
-    : PositionedLayoutConstraints(renderer, renderer.style(), selfAxis)
-{
 }
 
 bool PositionedLayoutConstraints::needsAnchor() const
@@ -123,19 +128,19 @@ bool PositionedLayoutConstraints::containingCoordsAreFlipped() const
     return !m_useStaticPosition && ((isBlockOpposing() && m_containingAxis == LogicalBoxAxis::Block) || (isOrthogonal() && orthogonalOpposing));
 }
 
-void PositionedLayoutConstraints::captureInsets(const RenderBox& renderer, const LogicalBoxAxis selfAxis)
+void PositionedLayoutConstraints::captureInsets()
 {
     bool isHorizontal = BoxAxis::Horizontal == m_physicalAxis;
 
     if (isHorizontal) {
-        m_bordersPlusPadding = renderer.borderLeft() + renderer.paddingLeft() + renderer.paddingRight() + renderer.borderRight();
+        m_bordersPlusPadding = m_renderer->borderLeft() + m_renderer->paddingLeft() + m_renderer->paddingRight() + m_renderer->borderRight();
         m_useStaticPosition = m_style.left().isAuto() && m_style.right().isAuto() && !m_defaultAnchorBox;
     } else {
-        m_bordersPlusPadding = renderer.borderTop() + renderer.paddingTop() + renderer.paddingBottom() + renderer.borderBottom();
+        m_bordersPlusPadding = m_renderer->borderTop() + m_renderer->paddingTop() + m_renderer->paddingBottom() + m_renderer->borderBottom();
         m_useStaticPosition = m_style.top().isAuto() && m_style.bottom().isAuto() && !m_defaultAnchorBox;
     }
 
-    if (LogicalBoxAxis::Inline == selfAxis) {
+    if (LogicalBoxAxis::Inline == m_selfAxis) {
         m_marginBefore = isHorizontal ? m_style.marginLeft() : m_style.marginTop();
         m_marginAfter = isHorizontal ? m_style.marginRight() : m_style.marginBottom();
         m_insetBefore = m_style.logicalLeft();
@@ -160,25 +165,25 @@ void PositionedLayoutConstraints::captureInsets(const RenderBox& renderer, const
 
 // MARK: - Adjustments to the containing block.
 
-void PositionedLayoutConstraints::captureGridArea(const RenderBox& renderer)
+void PositionedLayoutConstraints::captureGridArea()
 {
     const CheckedPtr gridContainer = dynamicDowncast<RenderGrid>(m_container.get());
     if (!gridContainer)
         return;
 
     if (LogicalBoxAxis::Inline == m_containingAxis) {
-        auto range = gridContainer->gridAreaColumnRangeForOutOfFlow(renderer);
+        auto range = gridContainer->gridAreaColumnRangeForOutOfFlow(m_renderer);
         if (!range)
             return;
         m_containingRange = *range;
-        m_marginPercentageBasis = range->size();
+        m_containingInlineSize = range->size();
     } else {
-        auto range = gridContainer->gridAreaRowRangeForOutOfFlow(renderer);
+        auto range = gridContainer->gridAreaRowRangeForOutOfFlow(m_renderer);
         if (range)
             m_containingRange = *range;
-        auto columnRange = gridContainer->gridAreaColumnRangeForOutOfFlow(renderer);
+        auto columnRange = gridContainer->gridAreaColumnRangeForOutOfFlow(m_renderer);
         if (columnRange)
-            m_marginPercentageBasis = columnRange->size();
+            m_containingInlineSize = columnRange->size();
     }
 
     if (!startIsBefore()) {
@@ -188,13 +193,13 @@ void PositionedLayoutConstraints::captureGridArea(const RenderBox& renderer)
     }
 }
 
-void PositionedLayoutConstraints::captureAnchorGeometry(const RenderBox& renderer)
+void PositionedLayoutConstraints::captureAnchorGeometry()
 {
     if (!m_defaultAnchorBox)
         return;
 
     // Store the anchor geometry.
-    LayoutRect anchorRect = Style::AnchorPositionEvaluator::computeAnchorRectRelativeToContainingBlock(*m_defaultAnchorBox, *renderer.containingBlock());
+    LayoutRect anchorRect = Style::AnchorPositionEvaluator::computeAnchorRectRelativeToContainingBlock(*m_defaultAnchorBox, *m_renderer->containingBlock());
     if (BoxAxis::Horizontal == m_physicalAxis)
         m_anchorArea.set(anchorRect.x(), anchorRect.width());
     else
@@ -211,16 +216,16 @@ void PositionedLayoutConstraints::captureAnchorGeometry(const RenderBox& rendere
 
     // Margin basis is always against the inline axis.
     if (LogicalBoxAxis::Inline == m_containingAxis) {
-        m_marginPercentageBasis = m_containingRange.size();
+        m_containingInlineSize = m_containingRange.size();
         return;
     }
     // Else we're representing the block axis, but need the inline dimensions.
     auto inlineAxis = oppositeAxis(m_physicalAxis);
-    LayoutRange inlineContainingBlock(m_container->borderLogicalLeft(), m_marginPercentageBasis);
+    LayoutRange inlineContainingBlock(m_container->borderLogicalLeft(), m_containingInlineSize);
     auto inlineAnchorArea = BoxAxis::Horizontal == inlineAxis
         ? LayoutRange { anchorRect.x(), anchorRect.width() }
         : LayoutRange { anchorRect.y(), anchorRect.height() };
-    m_marginPercentageBasis = adjustForPositionArea(inlineContainingBlock, inlineAnchorArea, inlineAxis).size();
+    m_containingInlineSize = adjustForPositionArea(inlineContainingBlock, inlineAnchorArea, inlineAxis).size();
 }
 
 LayoutRange PositionedLayoutConstraints::adjustForPositionArea(const LayoutRange rangeToAdjust, const LayoutRange anchorArea, const BoxAxis containerAxis)
@@ -319,8 +324,7 @@ void PositionedLayoutConstraints::resolvePosition(RenderBox::LogicalExtentComput
     auto position = m_insetModifiedContainingRange.min() + usedMarginBefore + alignmentShift();
 
     computedValues.m_position = position;
-    LogicalBoxAxis selfAxis = isOrthogonal() ? oppositeAxis(m_containingAxis) : m_containingAxis;
-    if (LogicalBoxAxis::Inline == selfAxis) {
+    if (LogicalBoxAxis::Inline == m_selfAxis) {
         if (m_writingMode.isLogicalLeftInlineStart() == !containingCoordsAreFlipped()) {
             computedValues.m_margins.m_start = usedMarginBefore;
             computedValues.m_margins.m_end = usedMarginAfter;
@@ -415,13 +419,13 @@ bool PositionedLayoutConstraints::alignmentAppliesStretch(ItemPosition normalAli
 
 // MARK: - Static Position Computation
 
-void PositionedLayoutConstraints::computeStaticPosition(const RenderBox& renderer, LogicalBoxAxis selfAxis)
+void PositionedLayoutConstraints::computeStaticPosition()
 {
     ASSERT(m_useStaticPosition);
 
     if (is<RenderGrid>(m_container)) {
         // Grid Containers have special behavior, see https://www.w3.org/TR/css-grid/#abspos
-        if (m_container.get() == renderer.parent()) {
+        if (m_container.get() == m_renderer->parent()) {
             // Fake the static layout right here so it integrates with grid-area properly.
             m_useStaticPosition = false; // Avoid the static position code path.
             m_insetBefore = 0_css_px;
@@ -451,23 +455,23 @@ void PositionedLayoutConstraints::computeStaticPosition(const RenderBox& rendere
         m_containingRange.moveTo(m_originalContainingRange.min());
     }
 
-    if (selfAxis == LogicalBoxAxis::Inline)
-        computeInlineStaticDistance(renderer);
+    if (m_selfAxis == LogicalBoxAxis::Inline)
+        computeInlineStaticDistance();
     else
-        computeBlockStaticDistance(renderer);
+        computeBlockStaticDistance();
 }
 
-void PositionedLayoutConstraints::computeInlineStaticDistance(const RenderBox& renderer)
+void PositionedLayoutConstraints::computeInlineStaticDistance()
 {
-    auto* parent = renderer.parent();
+    auto* parent = m_renderer->parent();
     auto parentWritingMode = parent->writingMode();
 
     // For orthogonal flows we don't care whether the parent is LTR or RTL because it does not affect the position in our inline axis.
     bool haveOrthogonalWritingModes = parentWritingMode.isOrthogonal(m_writingMode);
     if (parentWritingMode.isLogicalLeftInlineStart() || haveOrthogonalWritingModes) {
         LayoutUnit staticPosition = haveOrthogonalWritingModes
-            ? renderer.layer()->staticBlockPosition() - m_container->borderBefore()
-            : renderer.layer()->staticInlinePosition() - m_container->borderLogicalLeft();
+            ? m_renderer->layer()->staticBlockPosition() - m_container->borderBefore()
+            : m_renderer->layer()->staticInlinePosition() - m_container->borderLogicalLeft();
         for (auto* current = parent; current && current != m_container.get(); current = current->container()) {
             CheckedPtr renderBox = dynamicDowncast<RenderBox>(*current);
             if (!renderBox)
@@ -479,7 +483,7 @@ void PositionedLayoutConstraints::computeInlineStaticDistance(const RenderBox& r
         m_insetBefore = Style::InsetEdge::Fixed { staticPosition };
     } else {
         ASSERT(!haveOrthogonalWritingModes);
-        LayoutUnit staticPosition = renderer.layer()->staticInlinePosition() + containingSize() + m_container->borderLogicalLeft();
+        LayoutUnit staticPosition = m_renderer->layer()->staticInlinePosition() + containingSize() + m_container->borderLogicalLeft();
         auto& enclosingBox = parent->enclosingBox();
         if (&enclosingBox != m_container.get() && m_container->isDescendantOf(&enclosingBox)) {
             m_insetAfter = Style::InsetEdge::Fixed { staticPosition };
@@ -503,15 +507,17 @@ void PositionedLayoutConstraints::computeInlineStaticDistance(const RenderBox& r
     }
 }
 
-void PositionedLayoutConstraints::computeBlockStaticDistance(const RenderBox& renderer)
+void PositionedLayoutConstraints::computeBlockStaticDistance()
 {
-    auto* parent = renderer.parent();
+    auto* parent = m_renderer->parent();
     bool haveOrthogonalWritingModes = parent->writingMode().isOrthogonal(m_writingMode);
     // The static positions from the child's layer are relative to the container block's coordinate space (which is determined
     // by the writing mode and text direction), meaning that for orthogonal flows the logical top of the child (which depends on
     // the child's writing mode) is retrieved from the static inline position instead of the static block position.
-    auto staticLogicalTop = haveOrthogonalWritingModes ? renderer.layer()->staticInlinePosition() : renderer.layer()->staticBlockPosition();
-    if (shouldFlipStaticPositionInParent(renderer, *m_container)) {
+    auto staticLogicalTop = haveOrthogonalWritingModes
+        ? m_renderer->layer()->staticInlinePosition()
+        : m_renderer->layer()->staticBlockPosition();
+    if (shouldFlipStaticPositionInParent(m_renderer, *m_container)) {
         // Note that at this point we can't resolve static top position completely in flipped case as at this point the height of the child box has not been computed yet.
         // What we can compute here is essentially the "bottom position".
         staticLogicalTop = downcast<RenderBox>(*parent).flipForWritingMode(staticLogicalTop);
@@ -574,12 +580,12 @@ void PositionedLayoutConstraints::fixupLogicalLeftPosition(RenderBox::LogicalExt
 // The |containerLogicalHeightForPositioned| is already aware of orthogonal flows.
 // The logicalTop concept is confusing here. It's the logical top from the child's POV. This means that is the physical
 // y if the child is vertical or the physical x if the child is horizontal.
-void PositionedLayoutConstraints::fixupLogicalTopPosition(RenderBox::LogicalExtentComputedValues& computedValues, const RenderBox& renderer) const
+void PositionedLayoutConstraints::fixupLogicalTopPosition(RenderBox::LogicalExtentComputedValues& computedValues) const
 {
     // Deal with differing writing modes here. Our offset needs to be in the containing block's coordinate space. If the containing block is flipped
     // along this axis, then we need to flip the coordinate. This can only happen if the containing block is both a flipped mode and perpendicular to us.
     if (m_useStaticPosition) {
-        if (shouldFlipStaticPositionInParent(renderer, *m_container)) {
+        if (shouldFlipStaticPositionInParent(m_renderer, *m_container)) {
             // Let's finish computing static top postion inside parents with flipped writing mode now that we've got final height value.
             // see details in computeBlockStaticDistance.
             computedValues.m_position -= computedValues.m_extent;
